# rust_criterion_example

./: Cargo.toml
benches/: distance.rs
src/: lib.rs
