[package]
name = "pca_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "distance"
harness = false